# clip

./: .gitignore  LICENSE  TESTING_QUICK_REFERENCE.md  TEST_SUMMARY.md  pytest.ini  run_tests.sh
cli_TtSQL+/: README.md
clip/: __init__.py  config.py  environment.yaml  llm_client.py  presto_client.py  pyproject.toml
presto-ai-cli/: .env.example  README.md  environment-minimal.yaml  pyproject.toml
presto-ai-cli/presto_ai_cli/: cli.py  notebook.py  superset_client.py
tests/: README.md  __init__.py  test_cli.py  test_config.py  test_llm_client.py  test_notebook.py  test_presto_client.py
