[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presto-ai-cli"
version = "0.1.0"
description = "CLI tool for text-to-SQL and text-to-PySpark generation with Presto"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["presto", "sql", "pyspark", "llm", "text-to-sql", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Data Analysts",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"

dependencies = [
    "click>=8.0",
    "presto-python-client>=0.8.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
ollama = ["ollama>=0.1"]
superset = ["requests>=2.28"]
browser = ["selenium>=4.0"]
all = [
    "openai>=1.0",
    "anthropic>=0.20",
    "ollama>=0.1",
    "requests>=2.28",
    "selenium>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
presto-ai = "presto_ai_cli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/presto-ai-cli"
Documentation = "https://github.com/yourusername/presto-ai-cli#readme"
Repository = "https://github.com/yourusername/presto-ai-cli.git"
Issues = "https://github.com/yourusername/presto-ai-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["presto_ai_cli*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
